# python-rich-cli

./: .gitignore  README.md  pyproject.toml
src/app_name/command/: command1.py  command2.py  command3.py  command4.py
src/app_name/command/command3/: __main__.py
src/app_name/command/command3/command/: sub1.py  sub2.py
tests/: test_app_name.py
