[tool.poetry]
name = "app-name"
version = "0.1.0"
description = ""
authors = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
command1 = "app_name.command.command1:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

