[tool.poetry]
name = "app-name"
version = "0.1.0"
description = ""
authors = ["Takeru Saito <takelushi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
command1 = "app_name.command.command1:main"
command2 = "app_name.command.command2:main"
command3 = "app_name.command.command3:main"
command4 = "app_name.command.command4:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

